CompleteClaim - Code review fixing