@@ -1,14 +1,13 @@
 package com.picpay.banking.pix.core.validators.claim;
 
-import com.google.common.base.Strings;
 import com.picpay.banking.pix.core.domain.Claim;
 import com.picpay.banking.pix.core.domain.ClaimSituation;
 import com.picpay.banking.pix.core.domain.ClaimType;
 import com.picpay.banking.pix.core.exception.ClaimError;
 import com.picpay.banking.pix.core.exception.ClaimException;
-import com.picpay.banking.pix.core.exception.UseCaseException;
 import com.picpay.banking.pix.core.validators.ClaimIdValidator;
 import lombok.AllArgsConstructor;
+import net.logstash.logback.encoder.org.apache.commons.lang3.StringUtils;
 
 import java.time.LocalDateTime;
 import java.util.Objects;
@@ -18,7 +17,7 @@ import java.util.Optional;
 public class CompleteClaimValidator {
 
     public static void validate(final String requestIdentifier, final Claim claim) {
-        if (Strings.isNullOrEmpty(requestIdentifier) || requestIdentifier.isBlank()) {
+        if (StringUtils.isBlank(requestIdentifier)) {
             throw new IllegalArgumentException("You must inform a request identifier");
         }
 
@@ -33,11 +32,11 @@ public class CompleteClaimValidator {
     public static void validateClaimSituation(Optional<Claim> optClaim){
         optClaim.ifPresent(claimResult -> {
             if(!ClaimSituation.CONFIRMED.equals(claimResult.getClaimSituation()))
-                throw new ClaimException(ClaimError.JDPIRVN011);
+                throw new ClaimException(ClaimError.INVALID_CLAIM_COMPLETED_SITUATION);
 
             if(ClaimType.POSSESSION_CLAIM.equals(claimResult.getClaimType()) &&
                     claimResult.getCompletionThresholdDate().isAfter(LocalDateTime.now()))
-                throw new ClaimException(ClaimError.JDPIRVN011);
+                throw new ClaimException(ClaimError.INVALID_CLAIM_COMPLETED_SITUATION);
         });
     }
 }
